--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^8.2",
         "illuminate/support": "^10.0|^11.0",
+        "illuminate/http": "^10.0|^11.0",
         "illuminate/filesystem": "^10.0|^11.0",
         "kornrunner/blurhash": "^1.1"
     }
