--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,8 @@
         "illuminate/console": "^10.0|^11.0",
         "kornrunner/blurhash": "^1.1",
         "ext-http": "*"
+    },
+    "require-dev": {
+        "orchestra/testbench": "9.x-dev"
     }
 }
