--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^10|^11",
-        "illuminate/http": "^10|^11",
-        "illuminate/filesystem": "^10|^11",
-        "illuminate/console": "^10|^11",
+        "illuminate/support": "^10|^11|^12",
+        "illuminate/http": "^10|^11|^12",
+        "illuminate/filesystem": "^10|^11|^12",
+        "illuminate/console": "^10|^11|^12",
         "kornrunner/blurhash": "^1.1",
         "ext-http": "*",
         "intervention/image": "^3"
